# CANONTRACE

./: .gitignore  comparator.py  config.py  main.py  models.py  pathway_server.py  pw_retreiver.py  pw_server_health_check.py  pyproject.toml  requirements.txt
agents/: base_agent.py  question_agent.py  retrival_agent_langgraph.py
llm/: gemini_client.py
prompts/: __init__.py  agent1_question_generation.txt  system_constraints.txt
rag_pipeline/ingestion/: utils.py
rag_pipeline/ingestion/chunking/: chunk_to_langdoc.py  pipeline.py
rag_pipeline/ingestion/chunking/modules/: chapter_splitter.py  character_extractor.py  semantic_chunker.py
rag_pipeline/ingestion/chunking/schemas/: schemas.py
rag_pipeline/ingestion/preprocessing/: pipeline.py
rag_pipeline/ingestion/preprocessing/cleaning/: text_cleaner.py
rag_pipeline/ingestion/preprocessing/ner_character_discovery/: alias_clusterer.py  candidate_extractor.py  canonical_builder.py
rag_pipeline/retrieval/: pipeline.py
rag_pipeline/retrieval/retriver_modules/: bm25Retriever.py  hybrid_retrieval.py  pathway_retriever.py  reranker.py
third_party_adapters/: factscore_adapter.py  hipporag_adapter.py  raptor_adaptor.py
ui/: app.py
