[project]
name = "iit-kgp-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ftfy>=6.3.1",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langchain-google-vertexai>=3.2.1",
    "spacy>=3.8.11",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-community>=0.4.1",
    "jq>=1.10.0",
    "pathway>=0.16.4",
    "openai>=2.15.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
]
